force-app/main/default/objects/Customer_Community_Alerts__c/Customer_Community_Alerts__c.object-meta.xml
<CustomObject>
    <label>Customer Community Alerts</label>
    <nameField>
        <displayFormat>ALRT{0000}</displayFormat>
        <label>Customer Community Alerts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Community Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>