force-app/main/default/objects/Customer_Community_Alerts__c/fields/Alert_Message__c.field-meta.xml
<CustomField>
    <fullName>Alert_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alert Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>