force-app/main/default/objects/Customer_Community_Alerts__c/fields/Font_Color__c.field-meta.xml
<CustomField>
    <fullName>Font_Color__c</fullName>
    <label>Font Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
                <default>true</default>
                <label>Red</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>