force-app/main/default/objects/Customer_Community_Alerts__c/fields/Font_Size__c.field-meta.xml
<CustomField>
    <fullName>Font_Size__c</fullName>
    <label>Font Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10pt</fullName>
            </value>
            <value>
                <fullName>12pt</fullName>
            </value>
            <value>
                <fullName>14pt</fullName>
                <default>true</default>
                <label>14pt</label>
            </value>
            <value>
                <fullName>16pt</fullName>
            </value>
            <value>
                <fullName>20pt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>