force-app/main/default/objects/Customer_Community_Alerts__c/fields/Show_in_Community__c.field-meta.xml
<CustomField>
    <fullName>Show_in_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked the alert will appear in the Customer Community</inlineHelpText>
    <label>Show in Community</label>
    <type>Checkbox</type>
</CustomField>