force-app/main/default/objects/Customer_Community_Alerts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Alert_Title__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Show_in_Community__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>